--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "portfolio-deux",
-  "version": "1.0.0",
-  "description": "React Portfolio Site",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-scripts": "1.0.14"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JamesBaine/portfolio-deux.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JamesBaine/portfolio-deux/issues"
-  },
-  "homepage": "https://github.com/JamesBaine/portfolio-deux#readme"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
