--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-deux",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://JamesBaine.github.io/porfolio-deux",
   "dependencies": {
     "jquery": "^3.2.1",
     "react": "^16.0.0",
@@ -13,11 +14,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "eslint": "^4.10.0",
-    "eslint-plugin-react": "^7.4.0",
+    "gh-pages": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.1.1",
     "gulp-clean-css": "^3.9.0",
