--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "eslint": "^4.11.0",
     "gh-pages": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.1.1",
