--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-deux",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://JamesBaine.github.io/porfolio-deux",
+  "homepage": "https://jamesbaine.github.io/portfolio-deux/",
   "dependencies": {
     "jquery": "^3.2.1",
     "react": "^16.0.0",
